--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,13 @@ html {
   line-height: 1.4;
 }
 
+html, 
+body {
+  width:  100%;
+  height: 100%;
+  margin: 0;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
