--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+canvas {
+  /* And see postBoot() in JS */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  /* <https://caniuse.com/#feat=object-fit> */
+}
+
+body {background-color: black;}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
