--- a/css/main.css
+++ b/css/main.css
@@ -105,15 +105,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-canvas {
-  /* And see postBoot() in JS */
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  /* <https://caniuse.com/#feat=object-fit> */
+.center {
+  margin: auto;
+  text-align: center;
 }
-
-body {background-color: black;}
 
 /* ==========================================================================
    Helper classes
